# browser-session-hub

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
scripts/: check_linux_dependencies.sh  start_browser_session_hub.sh
src/browser_session_hub/: __init__.py  __main__.py  app.py  browser_hub_playwright_wrapper.py  cli.py  config.py  models.py  process_utils.py  session_manager.py
src/browser_session_hub/static/: app.js  index.html  styles.css
tests/: test_app.py  test_browser_hub_playwright_wrapper.py  test_cli.py  test_config.py  test_process_utils.py  test_session_manager.py
