[project]
name = "browser-session-hub"
version = "0.1.0"
description = "Self-hosted isolated browser sessions with CDP and noVNC previews"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
browser-session-hub = "browser_session_hub.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.package-data]
"browser_session_hub" = ["static/**"]
